@@ -2079,22 +2079,6 @@ plugin-manager.progress.removing=Removing {0}
 plugin-manager.progress.downloading=Downloading {0}
 plugin-manager.progress.installing=Installing {0}
 plugin-manager.progress.stop=Stop
-
-plugin-manager.remove-done.title=Removal Complete
-plugin-manager.remove-done.message=You must restart jEdit for plugin removal take effect.
-
-plugin-manager.update-done.title=Update Complete
-plugin-manager.update-done.message=You must restart jEdit to use the updated plugins.
-
-plugin-manager.install-done.title=Installation Complete
-plugin-manager.install-done.message=You must restart jEdit to use the installed plugins.\n\
-	\n\
-	After jEdit is restarted, documentation for the newly\n\
-	installed plugins can be found in Help->jEdit Help.\n\
-	\n\
-	Remember that most plugins add commands to the\n\
-	'Plugins' menu; some also have settings that can be\n\
-	changed in the Utilities->Global Options dialog box.
 #}}}
 
 #{{{ Plugin remove error
